--- a/src/app.css
+++ b/src/app.css
@@ -189,4 +189,17 @@
 	h5 {
 		@apply text-base font-semibold;
 	}
+
+	@keyframes ticker {
+		0% {
+			transform: translateX(100%);
+		}
+		100% {
+			transform: translateX(-100%);
+		}
+	}
+
+	.ticker {
+		animation: ticker 10s linear infinite;
+	}
 }
